--- a/foundry.toml
+++ b/foundry.toml
@@ -6,6 +6,8 @@ optimizer = true
 optimizer_runs = 10000
 evm_version = "prague"
 solc_version = "0.8.25"
+fs_permissions = [{ access = "read", path = "./test/" }]
+gas_limit = 72057594037927935  # 2^56 - 1 (JavaScript-friendly)
 
 [profile.lite]
 optimizer = false
