--- a/pythonref/makefile
+++ b/pythonref/makefile
@@ -5,10 +5,10 @@ PYTHON = $(VENV)/bin/python
 AUX = *.pyc *.cprof */*.pyc
 
 install:
-	$(PY) -m venv $(VENV)
-	$(PIP) install eth_abi pandas pycryptodome scipy matplotlib 
+	$(PY) -m venv $(VENV) && \
+	$(PIP) install eth_abi pandas pycryptodome scipy matplotlib && \
 	$(PIP) install -e "git+https://github.com/ZKNoxHQ/NTT.git@main#egg=polyntt&subdirectory=assets/pythonref/"
-
+	
 test:
 	$(PYTHON) test.py
 	$(PYTHON) -m unittest discover -v
