--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "lib/InterfaceVerifier"]
+	path = lib/InterfaceVerifier
+	url = https://github.com/ZKNOXHQ/InterfaceVerifier
