--- a/foundry.toml
+++ b/foundry.toml
@@ -15,3 +15,15 @@ optimizer = false
 evm_version = "cancun"
 solc_version = "0.8.25"
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+
+[profile.ci]
+src = "src"
+out = "out"
+libs = ["lib"]
+optimizer = true
+optimizer_runs = 10000
+evm_version = "cancun"
+solc_version = "0.8.25"
+fs_permissions = [{ access = "read", path = "./test/" }]
+gas_limit = 72057594037927935
+ffi = true
