--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,58 +1,43 @@
 name: CI
-
 on:
   push:
   pull_request:
   workflow_dispatch:
-
 env:
   FOUNDRY_PROFILE: ci
-
 jobs:
   check:
     strategy:
       fail-fast: true
-
     name: Foundry project
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
         with:
           version: nightly
-
       - name: Show Forge version
         run: |
           forge --version
-
       - name: Run Forge fmt
         run: |
           forge fmt --check
         id: fmt
-
       - name: Run Forge build
         run: |
           forge build 
         id: build
-
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+      - name: Install Python dependencies
+        working-directory: pythonref
+        run: make install
       - name: Run Forge tests
         run: |
           forge test -vvv
         id: test
-
-#      - name: Set up Python
-#        uses: actions/setup-python@v5
-#        with:
-#          python-version: '3.10'  # Change to your required Python version
-
-#      - name: Install dependencies with Makefile
-#        run: make install
-
-#      - name: Run Tests
-#        run: |
-#          source myenv/bin/activate  # Activate the virtual environment
-#          make test
