Integrating C code for ETHFALCON

--- a/falcon/nistfalcon/Makefile
+++ b/falcon/nistfalcon/Makefile
@@ -14,27 +14,33 @@ LD = gcc
 LDFLAGS = 
 LIBS = 
 
-OBJ1 = build/codec.o build/common.o build/fft.o build/fpr.o build/keygen.o build/nist.o build/nist16.o build/epervier16.o build/rng.o build/shake.o build/sign.o build/vrfy.o
+
+OBJ1 =     build/codec.o build/common.o build/fft.o build/fpr.o build/keygen.o build/nist.o build/nist16.o build/epervier16.o build/rng.o build/shake.o build/sign.o build/vrfy.o build/keccak_prng.o build/keccak256.o
+OBJ1_ETH = build/codec.o build/common.o build/fft.o build/fpr.o build/keygen.o \
+           build/nist_eth.o build/nist16.o build/epervier16.o build/rng.o \
+           build/shake.o build/sign_eth.o build/vrfy.o \
+           build/keccak_prng.o build/keccak256.o
 
 OBJ2 = build/PQCgenKAT_sign.o build/katrng.o
 OBJ3 = build/PQCgenKAT_sign_zknox.o build/katrng.o
 OBJ4 = build/PQCgenKAT_sign_epervier_zknox.o build/katrng.o
 OBJ5 = build/PQCgenKAT_hashtopoint.o build/katrng.o
 OBJ6 = build/PQCgenKAT_falconcore.o build/katrng.o
+OBJ7 = build/PQCgenKAT_sign_eth.o build/katrng.o
 
-HEAD1 = src/api.h src/fpr.h src/inner.h
+HEAD1 = src/api.h src/fpr.h src/inner.h src/keccak_prng.h src/keccak256.h
 HEAD2 = src/api.h src/katrng.h
 
-all: build build/kat512int build/kat512int_hashtopoint build/kat512int_falconcore build/kat512int_zknox build/kat512int_epervier_zknox
+all: build build/kat512int build/kat512int_hashtopoint build/kat512int_falconcore build/kat512int_zknox build/kat512int_epervier_zknox build/kat512int_eth
 
 build:
 	-mkdir build
 
 clean:
-	-rm -f build/kat512int build/kat512int_zknox build/kat512int_epervier_zknox build/kat512int_hashtopoint $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) $(OBJ5)
+	-rm -f build/kat512int build/kat512int_zknox build/kat512int_epervier_zknox build/kat512int_hashtopoint build/kat512int_falconcore build/kat512int_eth build/sign_eth.o build/nist_eth.o $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) $(OBJ5) $(OBJ6) $(OBJ7)
 	find . -name '*.rsp' -delete
-	find . -name '*.req' -delete 
-	
+	find . -name '*.req' -delete
+
 build/kat512int: $(OBJ1) $(OBJ2)
 	$(LD) $(LDFLAGS) -o build/kat512int $(OBJ1) $(OBJ2) $(LIBS)
 
@@ -49,6 +55,9 @@ build/kat512int_hashtopoint: $(OBJ1) $(OBJ5)
 
 build/kat512int_falconcore: $(OBJ1) $(OBJ6)
 	$(LD) $(LDFLAGS) -o build/kat512int_falconcore $(OBJ1) $(OBJ6) $(LIBS)
+
+build/kat512int_eth: $(OBJ1_ETH) $(OBJ7)
+	$(LD) $(LDFLAGS) -o build/kat512int_eth $(OBJ1_ETH) $(OBJ7) $(LIBS)
 
 build/codec.o: src/codec.c $(HEAD1)
 	$(CC) $(CFLAGS) -c -o build/codec.o src/codec.c
@@ -71,6 +80,9 @@ build/nist.o: src/nist.c $(HEAD1)
 build/nist16.o: src/nist16.c $(HEAD1)
 	$(CC) $(CFLAGS) -c -o build/nist16.o src/nist16.c
 
+build/nist_eth.o: src/nist.c $(HEAD1)
+	$(CC) $(CFLAGS) -DETHFALCON -c -o build/nist_eth.o src/nist.c
+
 build/epervier16.o: src/epervier16.c $(HEAD1)
 	$(CC) $(CFLAGS) -c -o build/epervier16.o src/epervier16.c
 
@@ -80,8 +92,17 @@ build/rng.o: src/rng.c $(HEAD1)
 build/shake.o: src/shake.c $(HEAD1)
 	$(CC) $(CFLAGS) -c -o build/shake.o src/shake.c
 
+build/keccak_prng.o: src/keccak_prng.c $(HEAD1)
+	$(CC) $(CFLAGS) -c -o build/keccak_prng.o src/keccak_prng.c
+
+build/keccak256.o: src/keccak256.c $(HEAD1)
+	$(CC) $(CFLAGS) -c -o build/keccak256.o src/keccak256.c
+
 build/sign.o: src/sign.c $(HEAD1)
 	$(CC) $(CFLAGS) -c -o build/sign.o src/sign.c
+
+build/sign_eth.o: src/sign.c $(HEAD1)
+	$(CC) $(CFLAGS) -DETHFALCON -c -o build/sign_eth.o src/sign.c
 
 build/vrfy.o: src/vrfy.c $(HEAD1)
 	$(CC) $(CFLAGS) -c -o build/vrfy.o src/vrfy.c
@@ -103,3 +124,7 @@ build/PQCgenKAT_falconcore.o: KAT/PQCgenKAT_falconcore.c $(HEAD2)
 
 build/katrng.o: src/katrng.c $(HEAD2)
 	$(CC) $(CFLAGS) -I src/ -c -o build/katrng.o src/katrng.c
+
+build/PQCgenKAT_sign_eth.o: KAT/PQCgenKAT_sign.c $(HEAD2)
+	$(CC) $(CFLAGS) -I src/ -DALGNAME=falcon512int -DETHFALCON \
+	    -c -o build/PQCgenKAT_sign_eth.o KAT/PQCgenKAT_sign.c
